- removed hubs and fragglescript as they are too buggy
- fixed savegame root directory
- more compatibility fixes
- fixed several endian problems (for PowerPC and Sparc)
- added more options to menus
- fixed some default config values
- load OpenGL libraries only when needed
- autorun available in key bindings menu
- live monster counter for HUD
- fast forward to given map # in demo playback

Changes from v2.2.4 to v2.3.0
- the OpenGL libs are loaded dynamically
- only one executable for software rendering and OpenGL
- option for sound compatibility with original Doom
- added more compatibility levels (check frontend configurations!)
- in game switching between fullscreen and windowed mode
- fix super-shotgun reload on last shot
- intermission demo sync bug fixed
- support for more and less then 8 channels
- improved response file parser
- replaced use_vsync with use_doublebuffer in cfg file and implemented
  double buffering
- removed old Doom v1.2 lumps from prboom.wad
- windows also uses prboom.wad now
- removed lumps and tables which are in prboom.wad from source
- fix translucency map file handle leak
- added a quake like console
- new menu code and much more options available through it
- reworked software renderer
- bilinear filter for software rendering
- AdvanceScale2x like filter, but working on individual lines not fullscreen
- smooth edges on masked textures and sprites
- 16bit and 32bit software rendering
- sound and video settings changeable while running (Software <-> OpenGL)
- VIDD (Version Independant Doom Demo) support

Changes from v2.2.3 to v2.2.4
- fixed sky-over-sky HOM
- add sound compatibility option
- improve sound volume accuracy
- shared texture palette isn't the default anymore
- better invulnerabilty rendering for non paletted OpenGL
- network game server can now read config files to set game options
- fix latency problems in LAN games
- small compilation fixed for OpenGL on some unix platforms